# BlindEntropyFork

./: .gitignore  README.md  anomaly_log.jsonl.ots  anomaly_protocol.md  blind_entropy_proof.py  blind_entropy_roll.py  categories.json  encrypt_utils.py  log_anomaly.py  log_template.csv  log_template.csv.ots  pyproject.toml  requirements.txt  stats.md  tasks_hashes.json
all_ots/: 2025-05-30_grib.png.ots  2025-05-30_log_template.csv.ots  2025-05-30_log_template_dayend.csv.ots  2025-05-30_prethought.wav.ots  2025-05-30_yeti.png.ots  2025-05-31_grib.png.ots  2025-05-31_log_template_A.csv.ots  2025-05-31_log_template_B.csv.ots  2025-05-31_log_template_C.csv.ots  2025-05-31_log_template_dayend.csv.ots  2025-05-31_prethought.wav.ots  2025-05-31_yeti.png.ots  2025-06-01_log_template_A.csv.ots  2025-06-01_log_template_B.csv.ots  2025-06-01_log_template_C.csv.ots  2025-06-01_log_template_dayend.csv.ots  2025-06-01_prethought.txt.ots  2025-06-02_log_template_A.csv.ots  2025-06-02_log_template_B.csv.ots  2025-06-02_log_template_C.csv.ots  2025-06-02_prethought.txt.ots  2025-06-03_log_template_C.csv.ots  2025-06-04_log_template_C.csv.ots  2025-06-05_log_template_C.csv.ots  2025-06-06_log_template_C.csv.ots  2025-06-07_log_template_C.csv.ots  2025-06-08_log_template_C.csv.ots  2025-06-09_log_template_C.csv.ots  2025-06-10_log_template_C.csv.ots  2025-06-11_log_template_C.csv.ots  2025-06-12_log_template_C.csv.ots  2025-06-13_log_template_C.csv.ots  2025-06-14_log_template_C.csv.ots  2025-06-15_log_template_C.csv.ots  2025-06-16_log_template_C.csv.ots  2025-06-17_log_template_C.csv.ots  (+26 more)
(+17 files in other folders)
